--- a/.gitignore
+++ b/.gitignore
@@ -97,8 +97,8 @@ dmypy.json
 
 .idea
 
-/static/
-!/static/.gitkeep
+static/
+!static/.gitkeep
 
-/media/
-!/media/.gitkeep
+media/
+!media/.gitkeep
