--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,13 +9,17 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
+flake8==6.1.0
 gunicorn==21.2.0
 idna==3.4
+mccabe==0.7.0
 oauthlib==3.2.2
 packaging==23.1
 Pillow==10.0.0
 psycopg2-binary==2.9.7
+pycodestyle==2.11.0
 pycparser==2.21
+pyflakes==3.1.0
 PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2023.3
