--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,13 +5,14 @@ charset-normalizer==3.2.0
 cryptography==41.0.3
 defusedxml==0.7.1
 Django==4.2.4
+django-cors-headers==4.2.0
+django-debug-toolbar==4.2.0
 django-filter==23.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
 flake8==6.1.0
-gunicorn==21.2.0
 idna==3.4
 mccabe==0.7.0
 oauthlib==3.2.2
