--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -11,9 +11,7 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    build: 
-      context: ../
-      dockerfile: ./backend/Dockerfile
+    image: hstrprn/foodgram-backend:latest
     env_file:
       - ../.env
     volumes:
@@ -22,15 +20,13 @@ services:
     depends_on:
       - db
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: hstrprn/foodgram-frontend
     volumes:
       - ../frontend/:/app/result_build/
   gateway:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
