--- a/backend/.github/workflows/main.yml
+++ b/backend/.github/workflows/main.yml
@@ -1,20 +1,36 @@
 name: Foodgram workflow
-
-on:
-  pull_request:
-    branches:
-      - main
-    types:
-      - closed
+on: push
+# on:
+#   pull_request:
+#     branches:
+#       - main
+#     types:
+#       - closed
 
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
+  # if_merged:
+  #   name: Check success PR into master
+  #   if: github.event.pull_request.merged == true
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - run: |
+  #       echo The PR was merged
+
+  test:
+    name: Check PEP8
+    # needs: if_merged
     runs-on: ubuntu-latest
     steps:
-    - run: |
-        echo The PR was merged
-
-  # pep8:
-  #   needs: if_merged
-  #   ru
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          pythpo -m pip install --upgrade pip
+          pip install flake8 flake8-isort
+          pip install -r backend/requirements.txt
+      - name: Test with flake8
+        run: python -m flake8 /backend
