--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          pythpo -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install flake8 flake8-isort
           pip install -r backend/requirements.txt
       - name: Test with flake8
