--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [flake8]
+ignore = 
+    I004,
 exclude = 
     */migrations/,
     manage.py,
 per-file-ignores =
-    */settings.py:E501 
+    */settings.py:E501
