--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 flake8-isort
+          pip install flake8
           pip install -r backend/requirements.txt
       - name: Test with flake8
         run: python -m flake8 backend/.
