--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,11 @@
 [flake8]
-ignore = 
-    I004,
+ignore = W503
 exclude = 
     */migrations/,
+    venv/,
+    */venv/,
+    env/
+    */env/,
     manage.py,
 per-file-ignores =
     */settings.py:E501
