--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: tests
 on: push
 
 jobs:
-  test:
+  tests:
     name: Check PEP8
     runs-on: ubuntu-latest
     steps:
@@ -20,3 +20,42 @@ jobs:
       - name: Test with flake8
         run: python -m flake8 backend/.
 
+    build_backend_and_push_to_docker_hub:
+      name: Push Backend Docker Image to Docker Hub
+      runs-on: ubuntu-latest
+      needs: tests
+      steps:
+        - name: Check out code
+          uses: actions/checkout@v3
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+        - name: Login to Docker
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+        - name: Push to DockerHub
+          uses: docker/build-push-action@v4
+          with:
+            context: ./backend/
+            push: true
+            tags: ${{ secrets.USERNAME }}/kittygram_backend:latest
+
+    build_frontend_and_push_to_docker_hub:
+      name: Push Frontend Docker Image to Docker Hub
+      steps:
+        - name: Check out code
+          uses: actions/checkout@v3
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+        - name: Login to Docker
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+        - name: Push to DockerHub
+          uses: docker/build-push-action@v4
+          with:
+            context: ./frontend/
+            push: true
+            tags: ${{ secrets.USERNAME }}/kittygram_backend:latest
