--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -60,4 +60,4 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
