--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -63,8 +63,11 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
   deploy:
     name: Deploy Project on Server
+    runs-on: ubuntu-latest
     needs:
-      -tests
+      - tests
+      - build_backend_and_push_to_docker_hub
+      - build_frontend_and_push_to_docker_hub
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
