--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -77,7 +77,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: "infra/docker-compose.prod.yml"
           target: "foodgram"
       - name: Executing remote ssh commands to deploy
