--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -5,19 +5,19 @@ server {
     location /admin/ {
       client_max_body_size 20M;
       proxy_set_header Host $http_host;
-      proxy_pass http://backend:8000/admin/;
+      proxy_pass http://127.0.0.1:8000/admin/;
     }
     location /api/ {
       client_max_body_size 20M;
       proxy_set_header Host $http_host;
-      proxy_pass http://backend:8000/api/;
+      proxy_pass http://127.0.0.1:8000/api/;
     }
     location /api/docs/ {
       root /usr/share/nginx/html;
       try_files $uri $uri/redoc.html;
     }
     location /media/ {
-      alias /mediafiles/;
+      alias /var/www/backend/;
     }
     location ~/static/(admin|rest_framework) {
       root /var/www/backend/;
