--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -5,12 +5,12 @@ server {
     location /admin/ {
       client_max_body_size 20M;
       proxy_set_header Host $http_host;
-      proxy_pass http://127.0.0.1:8000/admin/;
+      proxy_pass http://backend:8000/admin/;
     }
     location /api/ {
       client_max_body_size 20M;
       proxy_set_header Host $http_host;
-      proxy_pass http://127.0.0.1:8000/api/;
+      proxy_pass http://backend:8000/api/;
     }
     location /api/docs/ {
       root /usr/share/nginx/html;
