--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -33,3 +33,6 @@ services:
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static:/var/www/backend/static/
       - media:/var/www/backend/media/
+    depends_on:
+      - backend
+      - frontend
