--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -17,7 +17,7 @@ server {
       try_files $uri $uri/redoc.html;
     }
     location /media/ {
-      alias /var/www/backend/;
+      alias /mediafiles/;
     }
     location ~/static/(admin|rest_framework) {
       root /var/www/backend/;
