--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -45,6 +45,8 @@ jobs:
   build_frontend_and_push_to_docker_hub:
     name: Push Frontend Docker Image to Docker Hub
     runs-on: ubuntu-latest
+    needs:
+      - build_gateway_and_push_to_docker_hub
     steps:
       - name: Check out code
         uses: actions/checkout@v3
