--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -28,8 +28,9 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/:/usr/share/nginx/html/api/docs/
       - static:/var/www/backend/static/
       - media:/mediafiles/
     depends_on:
