--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: .
+          # context: .
           file: ./backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
