--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app
 RUN pip install gunicorn==20.1.0
 COPY ./backend/requirements.txt .
 RUN pip install -r requirements.txt --no-cache-dir
-COPY ./backend/ .
-COPY ./data ../data
+COPY ./backend .
+COPY ./data/ ../data
 ENTRYPOINT ["sh", "/app/entrypoint.sh" ]
