--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx:1.19.3
-COPY nginx.conf /etc/nginx/templates/default.conf.template
+COPY ./infra/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./frontend/build /usr/share/nginx/html/
+COPY ../docs/ /usr/share/nginx/html/api/docs/
