--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -91,6 +91,7 @@ jobs:
       - tests
       - build_frontend_and_push_to_docker_hub
       - build_backend_and_push_to_docker_hub
+      - build_gateway_and_push_to_docker_hub
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
