--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -42,7 +42,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
-  build_frontend_and_push_to_docker_hub:
+  build_frontend_and_gateway_and_push_to_docker_hub:
     name: Push Frontend Docker Image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -61,30 +61,13 @@ jobs:
           context: ./frontend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-
-  build_gateway_and_push_to_docker_hub:
-    name: Push Gateway Docker Image to Docker Hub
-    runs-on: ubuntu-latest
-    needs:
-      - build_frontend_and_push_to_docker_hub
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./infra/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
 
   deploy:
     name: Deploy Project on Server
