--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,9 +31,11 @@ services:
     image: nginx:1.19.3
     ports:
       - "80:80"
+    depends_on:
+      - backend
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/var/www/backend/static/
+      - static:/staticfiles/static/
       - media:/mediafiles/
