--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -20,20 +20,20 @@ server {
       alias /mediafiles/;
     }
     location ~/static/(admin|rest_framework) {
-      root /var/www/backend/;
+      root /staticfiles/;
     }
     location / {
-      root /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri /index.html;
-      proxy_set_header        Host $host;
-      proxy_set_header        X-Real-IP $remote_addr;
-      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header        X-Forwarded-Proto $scheme;
-    }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   /var/html/frontend/;
-    }
+        root /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri /index.html;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+      }
+      error_page   500 502 503 504  /50x.html;
+      location = /50x.html {
+        root   /var/html/frontend/;
+      }
 
 }
