--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,31 +11,29 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    build: 
+    build:
       context: ../
       dockerfile: ./backend/Dockerfile
     env_file:
       - ../.env
     volumes:
-      - static:/app/static/
+      - static:/app/collected_static/
       - media:/app/media/
     depends_on:
       - db
   frontend:
     build:
-      context: ../frontend
-      dockerfile: Dockerfile
+      context: ../
+      dockerfile: ./frontend/Dockerfile
     volumes:
-      - ../frontend/:/app/result_build/
+      - static:/app/result_build/build
   gateway:
-    image: nginx:1.19.3
+    build:
+      context: ../
+      dockerfile: ./nginx/Dockerfile
     ports:
       - "80:80"
-    depends_on:
-      - backend
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/staticfiles/static/
+      - static:/staticfiles/
       - media:/mediafiles/
+
