--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ server {
       root /staticfiles/;
     }
     location / {
-        root /usr/share/nginx/html;
+        root /staticfiles/;
         index  index.html index.htm;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
