--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,11 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          pythpo -m pip install --upgrade pip
-          pip install flake8 flake8-isort
+          python -m pip install --upgrade pip
+          pip install flake8
           pip install -r backend/requirements.txt
       - name: Test with flake8
-        run: python -m flake8 /backend
+        run: python -m flake8 backend/.
 
   deploy:
     name: Deploy Project on Server
