--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,10 @@ server {
       proxy_set_header Host $http_host;
       proxy_pass http://backend:8000/api/;
     }
+    location /api/docs/ {
+      alias /staticfiles/;
+      try_files $uri /redoc.html;
+    }
     location /media/ {
       alias /mediafiles/;
     }
