--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     name: Deploy Project on Server
     runs-on: ubuntu-latest
     needs:
-      - tests
+      - if_merged
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
