--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,9 +5,9 @@ volumes:
   media:
 services:
   db:
+    image: postgres
     env_file:
       - ../.env
-    image: postgres:13
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
